<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <ImageView
            android:id="@+id/image_view_photo"
            android:layout_width="216dp"
            android:layout_height="204dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/image_background"
            android:contentDescription="@null"
            android:paddingHorizontal="92dp"
            android:paddingVertical="86dp"
            android:src="@drawable/ic_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_title"
            style="@style/Widget.Cocktails.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/text_input_title_hint"
            app:boxCornerRadiusBottomEnd="56dp"
            app:boxCornerRadiusBottomStart="56dp"
            app:boxCornerRadiusTopEnd="56dp"
            app:boxCornerRadiusTopStart="56dp"
            app:boxStrokeColor="@color/gray_ca"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:helperText="@string/text_input_title_helper_text"
            app:hintTextColor="@color/hint_text_color"
            app:placeholderTextColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_photo"
            app:placeholderText="@string/text_input_title_placeholder">

            <requestFocus />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/text_color"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_description"
            style="@style/Widget.Cocktails.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/text_input_description_hint"
            app:boxCornerRadiusBottomEnd="56dp"
            app:boxCornerRadiusBottomStart="56dp"
            app:boxCornerRadiusTopEnd="56dp"
            app:boxCornerRadiusTopStart="56dp"
            app:boxStrokeColor="@color/gray_ca"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:helperText="@string/text_input_description_helper_text"
            app:hintTextColor="@color/hint_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_title"
            app:placeholderText="@string/text_input_description_placeholder">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_description"
                style="@style/Widget.Cocktails.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                app:placeholderTextColor="@color/text_color"
                android:textColor="@color/text_color"
                android:gravity="top"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_ingredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_recipe"
            style="@style/Widget.Cocktails.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/text_input_recipe_hint"
            app:boxCornerRadiusBottomEnd="56dp"
            app:boxCornerRadiusBottomStart="56dp"
            app:boxCornerRadiusTopEnd="56dp"
            app:boxCornerRadiusTopStart="56dp"
            app:boxStrokeColor="@color/gray_ca"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:helperText="@string/text_input_recipe_helper_text"
            app:hintTextColor="@color/hint_text_color"
            app:placeholderTextColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_ingredients"
            app:placeholderText="@string/text_input_recipe_placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_recipe"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:textColor="@color/text_color"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_solid_bg"
            android:text="@string/button_save"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_recipe" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_stroke_bg"
            android:text="@string/button_cancel"
            android:textAlignment="center"
            android:textColor="@color/blue_4B"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>